--- a/AAkhil/about.css
+++ b/AAkhil/about.css
@@ -12,6 +12,10 @@
 .logo-placeholder {
   width: 120px;
   height: 40px;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #a4c3b2;
   border-radius: 6px;
 }
@@ -57,8 +61,8 @@
 }
 
 .about-img {
-  width: 100%;
-  height: 200px;
+  max-width: 90%;
+  max-height: 260px;
   background-color: #cce3de;
   border-radius: 10px;
   margin: 0 auto;
