--- a/AAkhil/style.css
+++ b/AAkhil/style.css
@@ -26,6 +26,10 @@ body {
 .logo-placeholder {
   width: 120px;
   height: 40px;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #a4c3b2;
   border-radius: 6px;
 }
